@@ -1,24 +1,29 @@
 package com.example.springairagdemo.service;
 
-import io.milvus.client.MilvusServiceClient;
-import io.milvus.common.clientenum.ConsistencyLevelEnum;
-import io.milvus.grpc.DataType;
-import io.milvus.grpc.MutationResult;
-import io.milvus.grpc.SearchResults;
-import io.milvus.param.IndexType;
-import io.milvus.param.MetricType;
-import io.milvus.param.R;
-import io.milvus.param.RpcStatus;
-import io.milvus.param.collection.CreateCollectionParam;
-import io.milvus.param.collection.DropCollectionParam;
-import io.milvus.param.collection.FieldType;
-import io.milvus.param.collection.HasCollectionParam;
-import io.milvus.param.dml.DeleteParam;
-import io.milvus.param.dml.InsertParam;
-import io.milvus.param.dml.SearchParam;
-import io.milvus.param.index.CreateIndexParam;
-import io.milvus.response.SearchResultsWrapper;
-import io.milvus.response.SearchResultsWrapper.IDScore;
+import com.google.gson.Gson;
+import com.google.gson.JsonObject;
+import io.milvus.common.clientenum.FunctionType;
+import io.milvus.v2.client.MilvusClientV2;
+import io.milvus.v2.common.DataType;
+import io.milvus.v2.common.IndexParam;
+import io.milvus.v2.service.collection.request.AddFieldReq;
+import io.milvus.v2.service.collection.request.CreateCollectionReq;
+import io.milvus.v2.service.collection.request.DescribeCollectionReq;
+import io.milvus.v2.service.collection.request.DropCollectionReq;
+import io.milvus.v2.service.collection.request.HasCollectionReq;
+import io.milvus.v2.service.collection.request.LoadCollectionReq;
+import io.milvus.v2.service.collection.request.ReleaseCollectionReq;
+import io.milvus.v2.service.collection.response.DescribeCollectionResp;
+import io.milvus.v2.service.index.request.CreateIndexReq;
+import io.milvus.v2.service.vector.request.AnnSearchReq;
+import io.milvus.v2.service.vector.request.DeleteReq;
+import io.milvus.v2.service.vector.request.HybridSearchReq;
+import io.milvus.v2.service.vector.request.InsertReq;
+import io.milvus.v2.service.vector.request.SearchReq;
+import io.milvus.v2.service.vector.request.data.EmbeddedText;
+import io.milvus.v2.service.vector.request.data.FloatVec;
+import io.milvus.v2.service.vector.request.ranker.RRFRanker;
+import io.milvus.v2.service.vector.response.SearchResp;
 import jakarta.annotation.PreDestroy;
 import lombok.AllArgsConstructor;
 import lombok.Data;
@@ -31,8 +36,8 @@ import org.springframework.ai.embedding.EmbeddingResponse;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
@@ -40,16 +45,23 @@ import java.util.concurrent.ConcurrentHashMap;
  * <p>
  * 每个知识库对应一个独立的 collection，命名规则：kb_{knowledgeBaseId}
  * <p>
- * Milvus collection 字段（仅存向量 + 引用，文本内容存 MySQL knowledge_chunk）：
+ * 使用 Milvus v2 客户端（MilvusClientV2），collection 字段（文本落库，Milvus 侧同时存 BM25 全文索引字段）：
  * <pre>
- *   id          INT64        主键（自增）
- *   knowledgeId INT64        知识库 ID
- *   documentId  INT64        文档 ID
- *   chunkId     INT64        knowledge_chunk.id
- *   pageNo      INT32        PDF 页码
- *   chunkIndex  INT32        chunk 序号
- *   embedding   FLOAT_VECTOR(1024)
+ *   id          INT64                 主键（自增）
+ *   knowledgeId INT64                 知识库 ID
+ *   documentId  INT64                 文档 ID
+ *   chunkId     INT64                 knowledge_chunk.id
+ *   pageNo      INT32                 PDF 页码
+ *   chunkIndex  INT32                 chunk 序号
+ *   text        VARCHAR(65535)        chunk 文本（enable_analyzer，供 BM25 全文检索）
+ *   sparse      SPARSE_FLOAT_VECTOR   BM25 函数输出（FUNCTION 自动生成，无需写入）
+ *   embedding   FLOAT_VECTOR(1024)    dense 语义向量
  * </pre>
+ * 检索支持两种模式：
+ * <ul>
+ *   <li>{@link #search} 纯向量检索（dense，兼容旧 collection）</li>
+ *   <li>{@link #hybridSearch} 混合检索（dense + BM25 全文，RRF 融合，Milvus 服务端 2.5+）</li>
+ * </ul>
  */
 @Service
 @Slf4j
@@ -61,6 +73,9 @@ public class VectorStoreService {
     /** 向量维度，须与 EmbeddingModel 输出一致 */
     private static final int EMBEDDING_DIM = 1024;
 
+    /** VarChar 字段最大字节数（Milvus 上限），中文按 UTF-8 3 字节/字符估算 */
+    private static final int TEXT_MAX_LENGTH = 65535;
+
     /** 字段名 */
     private static final String FIELD_ID = "id";
     private static final String FIELD_KNOWLEDGE_ID = "knowledgeId";
@@ -69,19 +84,24 @@ public class VectorStoreService {
     private static final String FIELD_PAGE_NO = "pageNo";
     private static final String FIELD_CHUNK_INDEX = "chunkIndex";
     private static final String FIELD_EMBEDDING = "embedding";
+    /** BM25 全文检索文本字段（schema 中配置 chinese analyzer） */
+    private static final String FIELD_TEXT = "text";
+    /** BM25 函数输出稀疏向量字段 */
+    private static final String FIELD_SPARSE = "sparse";
 
     /** search 时额外返回的字段 */
     private static final List<String> OUT_FIELDS = List.of(
             FIELD_KNOWLEDGE_ID, FIELD_DOCUMENT_ID, FIELD_CHUNK_ID,
             FIELD_PAGE_NO, FIELD_CHUNK_INDEX);
 
-    private final MilvusServiceClient milvusClient;
+    private final MilvusClientV2 milvusClient;
     private final EmbeddingModel embeddingModel;
+    private final Gson gson = new Gson();
 
     /** 缓存已确认集合存在的 KB ID，避免重复 hasCollection 调用 */
     private final ConcurrentHashMap<Long, Boolean> collectionReady = new ConcurrentHashMap<>();
 
-    public VectorStoreService(MilvusServiceClient milvusClient, EmbeddingModel embeddingModel) {
+    public VectorStoreService(MilvusClientV2 milvusClient, EmbeddingModel embeddingModel) {
         this.milvusClient = milvusClient;
         this.embeddingModel = embeddingModel;
     }
@@ -94,7 +114,7 @@ public class VectorStoreService {
     // ===================== ChunkVectorData =====================
 
     /**
-     * 待写入向量库的 chunk 数据（含文本用于生成 embedding）
+     * 待写入向量库的 chunk 数据（含文本用于生成 embedding 与 BM25 全文索引）
      */
     @Data
     @NoArgsConstructor
@@ -105,14 +125,14 @@ public class VectorStoreService {
         private Long documentId;
         private Integer pageNo;
         private Integer chunkIndex;
-        /** 用于生成 embedding 的 chunk 文本 */
+        /** 用于生成 embedding 与 BM25 索引的 chunk 文本 */
         private String content;
     }
 
     // ===================== SearchResult =====================
 
     /**
-     * 向量检索返回结果
+     * 检索返回结果（dense 相似度分或 RRF 融合分，见各方法说明）
      */
     @Data
     @NoArgsConstructor
@@ -124,14 +144,14 @@ public class VectorStoreService {
         private Long documentId;
         private Integer pageNo;
         private Integer chunkIndex;
-        /** 相似度分数 */
+        /** 分数：纯向量检索为余弦相似度，混合检索为 RRF 融合分 */
         private Double score;
     }
 
     // ===================== Collection 生命周期管理 =====================
 
     /**
-     * 为指定知识库创建 Milvus collection（含索引）
+     * 为指定知识库创建 Milvus collection（含 BM25 全文检索字段 + dense/稀疏双索引）
      *
      * @param knowledgeBaseId 知识库 ID
      */
@@ -139,63 +159,60 @@ public class VectorStoreService {
         String collectionName = getCollectionName(knowledgeBaseId);
 
         if (hasCollection(knowledgeBaseId)) {
-            log.info("Milvus collection [{}] 已存在，跳过创建", collectionName);
+            if (!isHybridReady(collectionName)) {
+                log.warn("Milvus collection [{}] 由旧版本创建，缺少 BM25 全文检索字段（text/sparse）。"
+                        + "如需启用 Hybrid Search，请删除该 collection（或删除知识库后重建）并重新上传文档，"
+                        + "当前将降级为纯向量检索。", collectionName);
+            } else {
+                log.info("Milvus collection [{}] 已存在，跳过创建", collectionName);
+            }
             collectionReady.put(knowledgeBaseId, true);
             return;
         }
 
-        List<FieldType> fields = new ArrayList<>();
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_ID)
-                .withDataType(DataType.Int64)
-                .withPrimaryKey(true)
-                .withAutoID(true)
-                .build());
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_KNOWLEDGE_ID)
-                .withDataType(DataType.Int64)
-                .build());
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_DOCUMENT_ID)
-                .withDataType(DataType.Int64)
-                .build());
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_CHUNK_ID)
-                .withDataType(DataType.Int64)
-                .build());
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_PAGE_NO)
-                .withDataType(DataType.Int32)
-                .build());
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_CHUNK_INDEX)
-                .withDataType(DataType.Int32)
-                .build());
-        fields.add(FieldType.newBuilder()
-                .withName(FIELD_EMBEDDING)
-                .withDataType(DataType.FloatVector)
-                .withDimension(EMBEDDING_DIM)
-                .build());
-
-        CreateCollectionParam createParam = CreateCollectionParam.newBuilder()
-                .withCollectionName(collectionName)
-                .withFieldTypes(fields)
-                .withConsistencyLevel(ConsistencyLevelEnum.STRONG)
-                .build();
-
-        R<RpcStatus> createResult = milvusClient.createCollection(createParam);
-        if (createResult.getStatus() != 0) {
-            throw new RuntimeException("创建 Milvus collection [" + collectionName + "] 失败: "
-                    + createResult.getMessage());
-        }
-        log.info("Milvus collection [{}] 创建成功", collectionName);
-
-        createIndex(collectionName);
-
-        milvusClient.loadCollection(
-                io.milvus.param.collection.LoadCollectionParam.newBuilder()
-                        .withCollectionName(collectionName)
+        // addField / addFunction 为 CollectionSchema 实例方法，需先构建空 schema 再链式添加
+        CreateCollectionReq.CollectionSchema schema = CreateCollectionReq.CollectionSchema.builder().build();
+        schema.addField(scalarField(FIELD_ID, DataType.Int64, true))
+                .addField(scalarField(FIELD_KNOWLEDGE_ID, DataType.Int64, false))
+                .addField(scalarField(FIELD_DOCUMENT_ID, DataType.Int64, false))
+                .addField(scalarField(FIELD_CHUNK_ID, DataType.Int64, false))
+                .addField(scalarField(FIELD_PAGE_NO, DataType.Int32, false))
+                .addField(scalarField(FIELD_CHUNK_INDEX, DataType.Int32, false))
+                .addField(AddFieldReq.builder()
+                        .fieldName(FIELD_EMBEDDING)
+                        .dataType(DataType.FloatVector)
+                        .dimension(EMBEDDING_DIM)
+                        .build())
+                // BM25 全文检索文本字段：启用内置 analyzer，Milvus 端自动分词（chinese）
+                .addField(AddFieldReq.builder()
+                        .fieldName(FIELD_TEXT)
+                        .dataType(DataType.VarChar)
+                        .maxLength(TEXT_MAX_LENGTH)
+                        .enableAnalyzer(true)
+                        .analyzerParams(Map.of("type", "chinese"))
+                        .build())
+                // BM25 函数输出字段：由 Milvus 端根据 text 自动生成稀疏向量，无需写入
+                .addField(AddFieldReq.builder()
+                        .fieldName(FIELD_SPARSE)
+                        .dataType(DataType.SparseFloatVector)
+                        .build())
+                .addFunction(CreateCollectionReq.Function.builder()
+                        .name("bm25")
+                        .functionType(FunctionType.BM25)
+                        .inputFieldNames(List.of(FIELD_TEXT))
+                        .outputFieldNames(List.of(FIELD_SPARSE))
                         .build());
+
+        CreateCollectionReq createReq = CreateCollectionReq.builder()
+                .collectionName(collectionName)
+                .collectionSchema(schema)
+                .build();
+        milvusClient.createCollection(createReq);
+        log.info("Milvus collection [{}] 创建成功（含 BM25 全文检索字段）", collectionName);
+
+        createIndexes(collectionName);
+
+        milvusClient.loadCollection(LoadCollectionReq.builder().collectionName(collectionName).build());
 
         collectionReady.put(knowledgeBaseId, true);
         log.info("Milvus collection [{}] 索引创建并加载完毕", collectionName);
@@ -213,19 +230,9 @@ public class VectorStoreService {
             return;
         }
 
-        milvusClient.releaseCollection(
-                io.milvus.param.collection.ReleaseCollectionParam.newBuilder()
-                        .withCollectionName(collectionName)
-                        .build());
-
-        R<RpcStatus> dropResult = milvusClient.dropCollection(
-                DropCollectionParam.newBuilder().withCollectionName(collectionName).build());
-
-        if (dropResult.getStatus() != 0) {
-            log.error("删除 Milvus collection [{}] 失败: {}", collectionName, dropResult.getMessage());
-        } else {
-            log.info("Milvus collection [{}] 已删除", collectionName);
-        }
+        milvusClient.releaseCollection(ReleaseCollectionReq.builder().collectionName(collectionName).build());
+        milvusClient.dropCollection(DropCollectionReq.builder().collectionName(collectionName).build());
+        log.info("Milvus collection [{}] 已删除", collectionName);
 
         collectionReady.remove(knowledgeBaseId);
     }
@@ -233,10 +240,10 @@ public class VectorStoreService {
     // ===================== 向量写入 =====================
 
     /**
-     * 将 chunk 向量批量写入 Milvus
+     * 将 chunk 向量批量写入 Milvus（文本同时写入 BM25 全文检索字段）
      *
      * @param knowledgeBaseId 知识库 ID
-     * @param chunks          chunk 数据列表（含文本，用于生成 embedding）
+     * @param chunks          chunk 数据列表（含文本，用于生成 embedding 与 BM25 索引）
      * @return 写入条数
      */
     public int insertVectors(Long knowledgeBaseId, List<ChunkVectorData> chunks) {
@@ -253,46 +260,30 @@ public class VectorStoreService {
                 .map(Embedding::getOutput)
                 .toList();
 
-        // 2. 构建插入数据（id 自增，无需提供）
-        List<Long> knowledgeIds = new ArrayList<>();
-        List<Long> docIds = new ArrayList<>();
-        List<Long> chunkIds = new ArrayList<>();
-        List<Integer> pageNos = new ArrayList<>();
-        List<Integer> chunkIndices = new ArrayList<>();
-        List<List<Float>> vectorList = new ArrayList<>();
-
+        // 2. 构建插入数据（id 自增无需提供，sparse 由 BM25 函数自动生成）
+        List<JsonObject> data = new ArrayList<>();
         for (int i = 0; i < chunks.size(); i++) {
             ChunkVectorData c = chunks.get(i);
-            knowledgeIds.add(knowledgeBaseId);
-            docIds.add(c.getDocumentId());
-            chunkIds.add(c.getChunkId());
-            pageNos.add(c.getPageNo() != null ? c.getPageNo() : 0);
-            chunkIndices.add(c.getChunkIndex() != null ? c.getChunkIndex() : 0);
-
             float[] emb = embeddings.get(i);
             List<Float> vec = new ArrayList<>(emb.length);
             for (float v : emb) vec.add(v);
-            vectorList.add(vec);
+
+            JsonObject row = new JsonObject();
+            row.addProperty(FIELD_KNOWLEDGE_ID, knowledgeBaseId);
+            row.addProperty(FIELD_DOCUMENT_ID, c.getDocumentId());
+            row.addProperty(FIELD_CHUNK_ID, c.getChunkId());
+            row.addProperty(FIELD_PAGE_NO, c.getPageNo() != null ? c.getPageNo() : 0);
+            row.addProperty(FIELD_CHUNK_INDEX, c.getChunkIndex() != null ? c.getChunkIndex() : 0);
+            row.addProperty(FIELD_TEXT, truncateText(c.getContent()));
+            row.add(FIELD_EMBEDDING, gson.toJsonTree(vec));
+            data.add(row);
         }
 
-        List<InsertParam.Field> fieldsData = new ArrayList<>();
-        fieldsData.add(new InsertParam.Field(FIELD_KNOWLEDGE_ID, knowledgeIds));
-        fieldsData.add(new InsertParam.Field(FIELD_DOCUMENT_ID, docIds));
-        fieldsData.add(new InsertParam.Field(FIELD_CHUNK_ID, chunkIds));
-        fieldsData.add(new InsertParam.Field(FIELD_PAGE_NO, pageNos));
-        fieldsData.add(new InsertParam.Field(FIELD_CHUNK_INDEX, chunkIndices));
-        fieldsData.add(new InsertParam.Field(FIELD_EMBEDDING, vectorList));
-
-        InsertParam insertParam = InsertParam.newBuilder()
-                .withCollectionName(collectionName)
-                .withFields(fieldsData)
+        InsertReq insertReq = InsertReq.builder()
+                .collectionName(collectionName)
+                .data(data)
                 .build();
-
-        R<MutationResult> insertResult = milvusClient.insert(insertParam);
-        if (insertResult.getStatus() != 0) {
-            throw new RuntimeException("向量写入 collection [" + collectionName + "] 失败: "
-                    + insertResult.getMessage());
-        }
+        milvusClient.insert(insertReq);
 
         log.info("{} 个 chunk 向量已写入 Milvus collection [{}]", chunks.size(), collectionName);
         return chunks.size();
@@ -311,100 +302,145 @@ public class VectorStoreService {
         ensureReady(knowledgeBaseId);
 
         String expr = FIELD_DOCUMENT_ID + " == " + documentId;
-        DeleteParam param = DeleteParam.newBuilder()
-                .withCollectionName(collectionName)
-                .withExpr(expr)
+        DeleteReq deleteReq = DeleteReq.builder()
+                .collectionName(collectionName)
+                .filter(expr)
                 .build();
-
-        R<MutationResult> result = milvusClient.delete(param);
-        if (result.getStatus() != 0) {
-            log.error("按文档 ID={} 删除 Milvus 向量失败: {}", documentId, result.getMessage());
-        } else {
-            log.info("已删除文档 ID={} 的 Milvus 向量", documentId);
-        }
+        milvusClient.delete(deleteReq);
+        log.info("已删除文档 ID={} 的 Milvus 向量", documentId);
     }
 
     // ===================== 向量检索 =====================
 
     /**
-     * 在指定知识库中检索与查询最相关的 chunk
+     * 纯向量检索（dense）：在指定知识库中检索与查询最相关的 chunk
      *
      * @param knowledgeBaseId 知识库 ID
      * @param query           查询文本
      * @param topK            返回 Top-K 条
-     * @param threshold       相似度阈值
+     * @param threshold       余弦相似度阈值
      * @return 检索结果列表（含 chunkId，调用方通过 chunkId 从 MySQL 获取文本内容）
      */
     public List<SearchResult> search(Long knowledgeBaseId, String query, int topK, double threshold) {
         String collectionName = getCollectionName(knowledgeBaseId);
         ensureReady(knowledgeBaseId);
 
-        // 1. 向量化查询
-        float[] queryEmbedding = embeddingModel.embed(query);
-        List<Float> queryVec = new ArrayList<>(queryEmbedding.length);
-        for (float v : queryEmbedding) queryVec.add(v);
+        List<Float> queryVec = embedQuery(query);
 
-        // 2. 构建检索参数
-        SearchParam.Builder searchBuilder = SearchParam.newBuilder()
-                .withCollectionName(collectionName)
-                .withVectorFieldName(FIELD_EMBEDDING)
-                .withVectors(Collections.singletonList(queryVec))
-                .withTopK(topK)
-                .withMetricType(MetricType.COSINE)
-                .withParams("{\"nprobe\": 16}")
-                .withConsistencyLevel(ConsistencyLevelEnum.STRONG);
-        for (String outField : OUT_FIELDS) {
-            searchBuilder.addOutField(outField);
-        }
-        SearchParam searchParam = searchBuilder.build();
+        SearchReq searchReq = SearchReq.builder()
+                .collectionName(collectionName)
+                .data(List.of(new FloatVec(queryVec)))
+                .annsField(FIELD_EMBEDDING)
+                .metricType(IndexParam.MetricType.COSINE)
+                .topK(topK)
+                .outputFields(OUT_FIELDS)
+                .build();
+        SearchResp resp = milvusClient.search(searchReq);
 
-        R<SearchResults> searchResult = milvusClient.search(searchParam);
-        if (searchResult.getStatus() != 0) {
-            throw new RuntimeException("向量检索 collection [" + collectionName + "] 失败: "
-                    + searchResult.getMessage());
-        }
-
-        // 3. 解析结果：用 getFieldData() 取标量字段的 List<?>，避免 FieldDataWrapper.get(int,String) 只支持 JSON 类型的问题
-        SearchResultsWrapper wrapper = new SearchResultsWrapper(searchResult.getData().getResults());
-
-        List<?> knowledgeIds = wrapper.getFieldData(FIELD_KNOWLEDGE_ID, 0);
-        List<?> docIds = wrapper.getFieldData(FIELD_DOCUMENT_ID, 0);
-        List<?> chunkIds = wrapper.getFieldData(FIELD_CHUNK_ID, 0);
-        List<?> pageNos = wrapper.getFieldData(FIELD_PAGE_NO, 0);
-        List<?> chunkIndices = wrapper.getFieldData(FIELD_CHUNK_INDEX, 0);
-
-        List<SearchResult> results = new ArrayList<>();
-        List<IDScore> idScores = wrapper.getIDScore(0);
-        for (int i = 0; i < idScores.size(); i++) {
-            IDScore idScore = idScores.get(i);
-            double score = idScore.getScore();
-            if (score < threshold) continue;
-
-            results.add(new SearchResult(
-                    toLong(chunkIds.get(i)),
-                    toLong(knowledgeIds.get(i)),
-                    toLong(docIds.get(i)),
-                    toInt(pageNos.get(i)),
-                    toInt(chunkIndices.get(i)),
-                    score));
-        }
-
+        List<SearchResult> results = parseSearchResp(resp, threshold);
         log.info("在 collection [{}] 中检索到 {} 个相关 chunk (query={})", collectionName, results.size(), query);
         return results;
     }
 
+    /**
+     * 混合检索（Hybrid Search）：Dense 向量 + BM25 全文检索双路召回，Milvus 端 RRF 融合
+     * <p>
+     * 需要 collection 含 BM25 字段（由 {@link #createCollection} 创建），旧版 collection 不支持。
+     *
+     * @param knowledgeBaseId 知识库 ID
+     * @param query           查询文本
+     * @param denseTopK       dense 路召回候选数
+     * @param bm25TopK        BM25 路召回候选数
+     * @param rrfK            RRF 平滑系数 k（score = Σ 1/(k + rank)）
+     * @param topK            融合后返回 Top-K 条
+     * @return 融合结果列表（score 为 RRF 融合分）
+     */
+    public List<SearchResult> hybridSearch(Long knowledgeBaseId, String query, int denseTopK, int bm25TopK,
+                                           int rrfK, int topK) {
+        String collectionName = getCollectionName(knowledgeBaseId);
+        ensureReady(knowledgeBaseId);
+
+        List<Float> queryVec = embedQuery(query);
+
+        // 路 1：dense 语义检索
+        AnnSearchReq denseReq = AnnSearchReq.builder()
+                .vectorFieldName(FIELD_EMBEDDING)
+                .metricType(IndexParam.MetricType.COSINE)
+                .vectors(List.of(new FloatVec(queryVec)))
+                .topK(denseTopK)
+                .build();
+        // 路 2：BM25 全文检索（文本直接由 Milvus 内置 analyzer 分词并生成稀疏向量）
+        AnnSearchReq bm25Req = AnnSearchReq.builder()
+                .vectorFieldName(FIELD_SPARSE)
+                .metricType(IndexParam.MetricType.BM25)
+                .vectors(List.of(new EmbeddedText(query)))
+                .topK(bm25TopK)
+                .build();
+
+        HybridSearchReq hybridReq = HybridSearchReq.builder()
+                .collectionName(collectionName)
+                .searchRequests(List.of(denseReq, bm25Req))
+                .ranker(RRFRanker.builder().k(rrfK).build())
+                .topK(topK)
+                .outFields(OUT_FIELDS)
+                .build();
+        SearchResp resp = milvusClient.hybridSearch(hybridReq);
+
+        // RRF 融合分不应用 cosine 阈值，过滤由调用方（HybridSearchService）按配置处理
+        List<SearchResult> results = parseSearchResp(resp, 0.0);
+        log.info("Hybrid 检索 collection [{}] 召回 {} 个 chunk (query={})", collectionName, results.size(), query);
+        return results;
+    }
+
     // ===================== 辅助方法 =====================
+
+    private List<Float> embedQuery(String query) {
+        float[] queryEmbedding = embeddingModel.embed(query);
+        List<Float> queryVec = new ArrayList<>(queryEmbedding.length);
+        for (float v : queryEmbedding) queryVec.add(v);
+        return queryVec;
+    }
+
+    private List<SearchResult> parseSearchResp(SearchResp resp, double threshold) {
+        List<SearchResult> results = new ArrayList<>();
+        List<List<SearchResp.SearchResult>> rows = resp.getSearchResults();
+        if (rows == null || rows.isEmpty()) {
+            return results;
+        }
+        for (SearchResp.SearchResult sr : rows.get(0)) {
+            double score = sr.getScore() != null ? sr.getScore() : 0.0;
+            if (score < threshold) continue;
+            Map<String, Object> entity = sr.getEntity();
+            results.add(new SearchResult(
+                    toLong(entity.get(FIELD_CHUNK_ID)),
+                    toLong(entity.get(FIELD_KNOWLEDGE_ID)),
+                    toLong(entity.get(FIELD_DOCUMENT_ID)),
+                    toInt(entity.get(FIELD_PAGE_NO)),
+                    toInt(entity.get(FIELD_CHUNK_INDEX)),
+                    score));
+        }
+        return results;
+    }
 
     private String getCollectionName(Long knowledgeBaseId) {
         return COLLECTION_PREFIX + knowledgeBaseId;
     }
 
     private boolean hasCollection(Long knowledgeBaseId) {
-        R<Boolean> result = milvusClient.hasCollection(
-                HasCollectionParam.newBuilder()
-                        .withCollectionName(getCollectionName(knowledgeBaseId))
-                        .build());
-        return result.getStatus() == 0 && Boolean.TRUE.equals(result.getData());
+        return Boolean.TRUE.equals(milvusClient.hasCollection(
+                HasCollectionReq.builder().collectionName(getCollectionName(knowledgeBaseId)).build()));
+    }
+
+    /** 检查 collection 是否为含 BM25 字段的新版 schema */
+    private boolean isHybridReady(String collectionName) {
+        try {
+            DescribeCollectionResp resp = milvusClient.describeCollection(
+                    DescribeCollectionReq.builder().collectionName(collectionName).build());
+            return resp.getFieldNames() != null && resp.getFieldNames().contains(FIELD_SPARSE);
+        } catch (Exception e) {
+            log.warn("检查 collection [{}] schema 失败: {}", collectionName, e.getMessage());
+            return false;
+        }
     }
 
     private void ensureReady(Long knowledgeBaseId) {
@@ -415,6 +451,45 @@ public class VectorStoreService {
             throw new RuntimeException("知识库 [" + knowledgeBaseId + "] 的向量集合不存在，请先创建知识库");
         }
         collectionReady.put(knowledgeBaseId, true);
+    }
+
+    private void createIndexes(String collectionName) {
+        List<IndexParam> indexParams = new ArrayList<>();
+        indexParams.add(IndexParam.builder()
+                .fieldName(FIELD_EMBEDDING)
+                .indexType(IndexParam.IndexType.IVF_FLAT)
+                .metricType(IndexParam.MetricType.COSINE)
+                .build());
+        indexParams.add(IndexParam.builder()
+                .fieldName(FIELD_SPARSE)
+                .indexType(IndexParam.IndexType.SPARSE_INVERTED_INDEX)
+                .metricType(IndexParam.MetricType.BM25)
+                .build());
+        milvusClient.createIndex(CreateIndexReq.builder()
+                .collectionName(collectionName)
+                .indexParams(indexParams)
+                .build());
+    }
+
+    private static AddFieldReq scalarField(String fieldName, DataType dataType, boolean primaryKey) {
+        AddFieldReq.AddFieldReqBuilder builder = AddFieldReq.builder()
+                .fieldName(fieldName)
+                .dataType(dataType);
+        if (primaryKey) {
+            builder.isPrimaryKey(true).autoID(true);
+        }
+        return builder.build();
+    }
+
+    private static String truncateText(String content) {
+        if (content == null) {
+            return "";
+        }
+        // VarChar 按字节计长，中文 UTF-8 约 3 字节/字符，保守按字节上限的 1/3 截断字符数
+        if (content.length() > TEXT_MAX_LENGTH / 3) {
+            return content.substring(0, TEXT_MAX_LENGTH / 3);
+        }
+        return content;
     }
 
     private static Long toLong(Object obj) {
@@ -429,20 +504,5 @@ public class VectorStoreService {
         if (obj instanceof Number) return ((Number) obj).intValue();
         if (obj instanceof String) return Integer.parseInt((String) obj);
         return null;
-    }
-
-    private void createIndex(String collectionName) {
-        CreateIndexParam indexParam = CreateIndexParam.newBuilder()
-                .withCollectionName(collectionName)
-                .withFieldName(FIELD_EMBEDDING)
-                .withIndexType(IndexType.IVF_FLAT)
-                .withMetricType(MetricType.COSINE)
-                .withExtraParam("{\"nlist\": 128}")
-                .build();
-
-        R<RpcStatus> result = milvusClient.createIndex(indexParam);
-        if (result.getStatus() != 0) {
-            throw new RuntimeException("创建索引失败: " + result.getMessage());
-        }
     }
 }
